# navidrome-playlist-generator

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md
migrations/: 202603200001_init.sql
src/: lib.rs  main.rs
src/clients/: lastfm.rs  mod.rs  subsonic.rs
src/config/: mod.rs
src/db/: mod.rs
src/exporter/: mod.rs  navidrome_exporter.rs
src/generator/: mod.rs  playlist_generator.rs
src/ingestion/: lastfm_ingestion.rs  mod.rs  subsonic_ingestion.rs
src/models/: mod.rs
src/normalization/: matching.rs
src/scheduler/: daily_job.rs  mod.rs
src/scoring/: engine.rs
src/utils/: text.rs
